--- a/views/campground.ejs
+++ b/views/campground.ejs
@@ -12,7 +12,7 @@
         <% campgrounds.forEach(function(campground){ %>
             <div class="col-sm-6 col-md-3">
                 <div class="card">
-                    <img src=<%= campground.imgUrl %> class="card-img-top">
+                    <img src=<%= campground.image %> class="card-img-top">
                     <h5 class="card-title text-center"> <%= campground.name%> </h5>
                 </div>
             </div>
