--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,6 +10,9 @@
                 <input class="col-12" type="text" name="image" placeholder="image url">
             </div>
             <div class="form-group row">
+                <input class="col-12" type="text" name="description" placeholder="description">
+            </div>
+            <div class="form-group row">
                 <button class="col-12 btn-primary btn-lg">Submit</button>
             </div>
         </form>
